test/visibility/rename/repeatNewNames.good
repeatNewNames.chpl:7: In module 'M':
repeatNewNames.chpl:8: error: 'bleep' is multiply defined
